--- a/AnIceAndFire/app/build.gradle
+++ b/AnIceAndFire/app/build.gradle
@@ -32,11 +32,23 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
+    compile 'com.google.dagger:dagger:2.10'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+
     compile 'com.arello-mobile:moxy:1.5.1'
     compile 'com.arello-mobile:moxy-app-compat:1.5.1'
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.1'
 
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.9'
+
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
+    compile 'com.squareup.moshi:moshi:1.4.0'
+
+    debugCompile 'com.facebook.stetho:stetho:1.5.0'
+    debugCompile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     
 }
