--- a/AnIceAndFire/app/build.gradle
+++ b/AnIceAndFire/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.fernandocejas.frodo'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
@@ -7,6 +6,7 @@ android {
     buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "xyz.rnovoselov.enterprise.aniceandfire"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -63,5 +63,4 @@ dependencies {
 
     debugCompile 'com.facebook.stetho:stetho:1.5.0'
     debugCompile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
 }
