--- a/AnIceAndFire/app/src/main/AndroidManifest.xml
+++ b/AnIceAndFire/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="xyz.rnovoselov.enterprise.aniceandfire">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".IceAndFireApplication"
