--- a/AnIceAndFire/app/src/main/AndroidManifest.xml
+++ b/AnIceAndFire/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="xyz.rnovoselov.enterprise.aniceandfire">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".IceAndFireApplication"
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activities.MainActivity"></activity>
     </application>
 
 </manifest>
